# rolling_fingers_gripper

./: CMakeLists.txt  README.md  package.xml
src/: fsm_3_fingers.cpp  fsm_4_fingers.cpp  rolling_3_fingers.cpp  rolling_4_fingers.cpp
